Fixed navbar overlapping top of content sections.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -3,8 +3,7 @@ body {
 }
 
 section {
-    margin-top: 5%;
-    margin-bottom: 5%;
+    padding-top: 65px;
 }
 
 img {
